some cleanup of TreeNodes