@@ -12,13 +12,13 @@ public class NthDigit {
         if (n >= 1 && n <= 9) return n;
         long sum = 0L;
         for (int i = 0; ; i++) {
-            long pow = (9 * (new Double(Math.pow(10, i)).longValue())) * (i + 1);
+            long pow = (9 * (Double.valueOf(Math.pow(10, i)).longValue())) * (i + 1);
             sum += pow;
             if (sum >= n) {
                 long diff = (long) n - (sum - pow);
                 long num = diff / (i + 1);
                 long mod = diff % (i + 1);
-                long result = new Double(Math.pow(10, i)).intValue() + (num - 1) + (mod > 0 ? 1 : 0);
+                long result = Double.valueOf(Math.pow(10, i)).intValue() + (num - 1) + (mod > 0 ? 1 : 0);
                 String resultStr = String.valueOf(result);
                 return (mod == 0)
                         ? Integer.parseInt(String.valueOf(resultStr.charAt(resultStr.length() - 1)))
